<resources>
    <string name="app_name">Points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_in_game"><![CDATA[<-]]></string>
    <string name="play_offline">Играть локально</string>
    <string name="play_online">Играть по сети</string>
    <string name="account">Аккаунт</string>
    <string name="start">Начать</string>
    <string name="settings">Настройки</string>
    <string name="players">Игроки</string>
    <string name="minus">-</string>
    <string name="player_name">Имя игрока</string>
    <string name="count_players">Кол-во игроков</string>
    <string name="sec">сек.</string>
    <string name="width">Ширина</string>
    <string name="height">Высота</string>
    <string name="target_game">Цель игры</string>
    <string name="max_square">Наибольшая площадь</string>
    <string name="max_count_captive">Наибольшее кол-во пленных</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="update">Обновить</string>
    <string name="create_lobby">Создать лобби</string>
    <string name="online_lobby">Online комнаты</string>
    <string name="exit">Выйти</string>
    <string name="author">PermyakLogy</string>
    <string name="team">Команда</string>
    <string name="time_is_up">Время хода кончилось!</string>
    <string name="count_camps">Количество точек</string>
    <string name="target_captured">Целевой захват</string>
    <string name="limit_time">Ограничить время на ход</string>
    <string name="time_for_step">Время на ход</string>
    <string name="player">Игрок</string>
    <string name="statistic">Статистика</string>
    <string name="lock">Замок</string>
    <string name="clear_statistic">Очистить статистику</string>
</resources>