<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="36sp" />

    <Button
        android:id="@+id/play_offline_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="playOffline"
        android:text="@string/play_offline" />

    <Button
        android:id="@+id/play_online_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="playOnline"
        android:text="@string/play_online" />

    <Button
        android:id="@+id/show_account_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="showAccount"
        android:text="@string/account" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
